fix tests to align to new schema add row wrap to carousel card.

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -116,6 +116,9 @@
                     width: 180px;
                 }
         }
+        .lp-json-pollock-element-text{
+            white-space: normal;
+        }
     }
 
 
